--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <body>
 <h1> Did Jackson Win? </h1>
-  <h3> YES </h3>
+  <h3> No: 2 Yes: 1 </h3>
+  <br></br>
+  <h6> 10/17: Yes </h6>
 </body>
   
 <footer> Created by dengle1. </footer>
