Header and Footer
Updated size and content of footer

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
 <body>
 <h1> Did Jackson Win? </h1>
-  <h3> No: 2 Yes: 1 </h3>
+  <h2> No: 2 Yes: 1 </h2>
   <br></br>
-  <h6> 10/17: Yes </h6>
+  <br></br>
+  <h4> 10/17: Yes </h4>
 </body>
   
-<footer> Created by dengle1. </footer>
+<footer> Created by David Engle. </footer>
 </html>
