--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
   <h4> 10/17: Yes </h4>
 </body>
   
-<footer> Created by <a href= "engledavid.com"> David Engle</a>. </footer>
+<footer> Created by <a href= "www.engledavid.com"> David Engle</a>. </footer>
 </html>
