--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 
 <body>
 <h1> Did Jackson Win? </h1>
-  <h2> No: 2 Yes: 1 </h2>
+<h8> usually not, but here are today's results: </h8>
+<!--<br></br> -->
+  <h2> No game today </h2>
   <br></br>
   <br></br>
-  <h4> 10/17: Yes </h4>
+  <h4>Past game results</h4>
+  <h4> 10/17: Lose 2. Won 1. </h4>
+  <h4> 10/16: Won 1. </h4>
 </body>
   
 <footer> Created by <a href= "https://www.engledavid.com"> David Engle</a>. </footer>
