Grammar Change in Index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <br></br>
   <br></br>
   <h4>Past game results</h4>
-  <h4> 10/17: Lose 2. Won 1. </h4>
+  <h4> 10/17: Lost 2. Won 1. </h4>
   <h4> 10/16: Won 1. </h4>
 </body>
   
