--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <h4>Past game results</h4>
   <h4> 10/17: Lost 2. Won 1. </h4>
   <h4> 10/16: Won 1. </h4>
+  <br></br>
+  <br></br>
+  <br></br>
 </body>
   
-<footer> Created by <a href= "https://www.engledavid.com"> David Engle</a>. </footer>
+<footer> DidJacksonWin.com was created by <a href= "https://www.engledavid.com"> David Engle</a>. 
+</footer>
 </html>
