Update Today's Results

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <h1> Did Jackson Win? </h1>
 <h8> usually not, but here are today's results: </h8>
 <!--<br></br> -->
-  <h2> No game today </h2>
+  <h2> Today's Results: </h2>
+  <p1> Lost 1. Won 1. </p1>
   <br></br>
   <br></br>
   <h4>Past game results</h4>
