--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <h8> usually not, but here are today's results: </h8>
 <!--<br></br> -->
   <h2> Today's Results: </h2>
-  <p1> Lost 1. Won 1. </p1>
+  <p1> Lost 1. </p1>
   <br></br>
   <br></br>
   <h4>Past game results</h4>
+  <h4> 10/20: Lost 1 game </h4>
   <h4> 10/19: Lost 1. Won 1. </h4>
   <h4> 10/17: Lost 2. Won 1. </h4>
   <h4> 10/16: Won 1. </h4>
