--- a/index.html
+++ b/index.html
@@ -14,10 +14,35 @@
   <br></br>
   <br></br>
   <h4>Past game results</h4>
-  <h4> 10/20: Lost 1 game </h4>
-  <h4> 10/19: Lost 1. Won 1. </h4>
-  <h4> 10/17: Lost 2. Won 1. </h4>
-  <h4> 10/16: Won 1. </h4>
+
+  <table style="width:80%">
+  	<tr>
+  		<th>Date</th>
+  		<th>Wins</th>
+  		<th>Losses</th>
+  	</tr>
+  	<tr>
+  		<td> 10/20</td>
+  		<td> 0 </td>
+  		<td> 1 </td>
+  	</tr>
+  	<tr>
+  		<td> 10/19</td>
+  		<td> 1 </td>
+  		<td> 1 </td>
+  	</tr>
+  	<tr>
+  		<td> 10/17 </td>
+  		<td> 2 </td>
+  		<td> 1 </td>
+  	</tr>
+  	<tr>
+  		<td>10/16</td>
+  		<td> 1 </td>
+  		<td> 0 </td>
+  	</tr>
+  </table>	
+
   <br></br>
   <br></br>
   <br></br>
