--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h8> usually not, but here are today's results: </h8>
 <!--<br></br> -->
   <h2> Today's Results: </h2>
-  <p1> Lost 1. </p1>
+  <p1> Won 1. </p1>
   <br></br>
   <br></br>
   <h4>Past game results</h4>
@@ -18,6 +18,10 @@
   		<th>Wins</th>
   		<th>Losses</th>
   	</tr>
+  	<tr>
+  		<td>10/23</td>
+  		<td> 1 </td>
+  		<td> 0 </td>
   	<tr>
   		<td> 10/20</td>
   		<td> 0 </td>
