--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<HEAD>
+<head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108522177-1"></script>
 <script>
@@ -10,14 +10,14 @@
   gtag('config', 'UA-108522177-1');
 </script>
 
-</HEAD>
+</head>
 
 <body>
 <h1> Did Jackson Win? </h1>
 <h8> usually not, but here are today's results: </h8>
 <!--<br></br> -->
   <h2> Today's Results: </h2>
-  <p1> Won 1. </p1>
+  <p1> Won 2. Lost 1 </p1>
   <br></br>
   <br></br>
   <h4>Past game results</h4>
@@ -28,6 +28,10 @@
   		<th>Wins</th>
   		<th>Losses</th>
   	</tr>
+    <tr>
+      <td>10/24</td>
+      <td>2</td>
+      <td>1</td>
   	<tr>
   		<td>10/23</td>
   		<td> 1 </td>
