Guest appearance added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
   <br></br>
   <br></br>
+  <p1> We would like to recognize all competitors whom Jackson has faced; Sara, Rudys, Diana, Ally, Alida, David, Elise, and Jamila.
   <br></br>
+  
 </body>
   
 <footer> DidJacksonWin.com was created by <a href= "https://www.engledavid.com"> David Engle</a>. 
