--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+
+<link rel="stylesheet" type="text/css" href="body.css">
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108522177-1"></script>
 <script>
@@ -62,7 +65,7 @@
   <br></br>
   <p1> We would like to recognize all competitors whom Jackson has faced; Sara, Rudys, Diana, Ally, Alida, David, Elise, and Jamila.
   <br></br>
-  
+
 </body>
   
 <footer> DidJacksonWin.com was created by <a href= "https://www.engledavid.com"> David Engle</a>. 
