--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <p1> Won 2. Lost 1 </p1>
   <br></br>
   <br></br>
-  <h4>Past game results</h4>
+  <h4>Past game results:</h4>
 
   <table style="width:80%">
   	<tr>
-  		<th>Date</th>
-  		<th>Wins</th>
-  		<th>Losses</th>
+  		<th><u>Date</u></th>
+  		<th><u>Wins</u></th>
+  		<th><u>Losses</u></th>
   	</tr>
     <tr>
       <td>10/24</td>
