--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-
+<meta name="google-site-verification" content="VLycIAe5MvISfealahVJkyYziO_eb1fl1UqdMstRlvM" />
 <link rel="stylesheet" type="text/css" href="body.css">
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
