--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h8> usually not, but here are today's results: </h8>
 <!--<br></br> -->
   <h2> Today's Results: </h2>
-  <p1> Won 2. Lost 1 </p1>
+  <p1> Won 1. Lost 2 </p1>
   <br></br>
   <br></br>
   <h4>Past game results:</h4>
@@ -32,6 +32,10 @@
   		<th><u>Wins</u></th>
   		<th><u>Losses</u></th>
   	</tr>
+    <tdr>
+      <td>10/25</td>
+      <td>1</td>
+      <td>2</td>
     <tr>
       <td>10/24</td>
       <td>2</td>
