--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h8> usually not, but here are today's results: </h8>
 <!--<br></br> -->
   <h2> Today's Results: </h2>
-  <p1> Won 1</p1>
+  <p1> Won 3. Lost 1</p1>
   <br></br>
   <br></br>
   <h4>Past game results:</h4>
@@ -33,7 +33,11 @@
   		<th><u>Losses</u></th>
   	</tr>
     <tr>
-      <td> 10/30</td>
+      <td>10/31</td>
+      <td>3</td>
+      <td>1</td>
+    <tr>
+      <td>10/30</td>
       <td>1</td>
       <td>0</td>
     <tr>
