11/9 Score Update. * Update

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <meta name="google-site-verification" content="VLycIAe5MvISfealahVJkyYziO_eb1fl1UqdMstRlvM" />
 
+</script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
 <h8> usually not, but here are today's results: </h8>
 <!--<br></br> -->
   <h2> Today's Results: </h2>
-  <p1> Won 1. Lost 3</p1>
+  <p1> Won 1. Lost 1</p1>
   <br></br>
   <br></br>
   <h4>Past game results:</h4>
@@ -32,6 +33,10 @@
   		<th><u>Wins</u></th>
   		<th><u>Losses</u></th>
   	</tr>
+    <tr>
+      <td>11/9*</td>
+      <td>1</td>
+      <td>1</td>
     <tr>
       <td>11/8</td>
       <td>1</td>
@@ -100,11 +105,13 @@
   		<td> 0 </td>
   	</tr>
   </table>	
+  <span id="val"></span>
 
   <br></br>
   <br></br>
   <p1> We would like to recognize all competitors whom Jackson has faced; Sara, Rudys, Diana, Ally, Alida, David, Elise, and Jamila.
   <br></br>
+  <p1> * denotes outside factors that have played into the game. On 11/9, useage of new paddles made in Hong Kong were used</p1>
 
 </body>
   
