--- a/index.html
+++ b/index.html
@@ -131,5 +131,5 @@
   <br></br>
 </body>
   
-<footer> DidJacksonWin.com was created by <a href= "https://www.engledavid.com"> David Engle</a>. 
+<footer> DidJacksonWin.com was created by <a href= "https://www.linkedin.com/in/engledavid/"> David Engle</a>. 
 </footer>
